media/css/style.css
body {
  font-size: 10pt;
  line-height: 1.4em;
  color: #333;
  background: #E3E3E3 url(http://localhost/~mocha/nowdata-media/images/gradient_bg.gif) repeat-x;
}

a,
a.readmorelink:hover,
ul.topiclist h3 a:hover {
  text-decoration: underline;
}

#container {
  width: 948px;
  margin: auto;
  background: white url(http://localhost/~mocha/nowdata-media/images/body_bg_pattern.gif) repeat-y;
  padding-bottom : 40px;
}

#container-inner {
  background: url(http://localhost/~mocha/nowdata-media/images/body_bg.jpg) no-repeat;
}

#header {
}

#left {
  width : 540px;
  float: left;
}

#left .inner {
  margin : 40px 25px 25px 29px;
}

#left h2 {
  font-size : 1.8em;
  letter-spacing: -2px;
  font-weight: normal;
  font-style: normal;
  padding-bottom : 25px;
}

#left h2 em { 
  font-style: normal; 
  color : #000; 
}

#right {
  float: right;
  width : 400px;
}

#right .inner {
  margin : 40px 29px 25px 25px;
}

#right .section {
  margin-bottom : 20px;
  padding-bottom : 20px;
  border-bottom : 1px solid #ccc;
}

#right .section .last {
  border-bottom : none;
}

#right .section h2 {
  font-size : 1.4em;
  letter-spacing : -1px;
  margin-bottom : 20px;
  color : #737a80;
}

#footer {
  margin: 40px auto;
  width : 800px;
  text-align: center;
  font-weight: bold;
  color : #999;
  font-size : .9em;
}

h1#pagetitle {
  font-size : 2.2em;
  font-weight: normal;
  margin-bottom : 20px;
  letter-spacing : -2px;
  color : #db5e21;
  line-height : .9em;
}

h1#pagetitle em {
  font-style: normal;
  color : #fca942;
}

h2#pagesubtitle {
  margin-top : -15px;
  font-size : 1.2em;
  font-style: italic;
  font-weight: normal;
  color : #999;
  letter-spacing: -1px;
}

h3,
h3 a {
  color : #00426d;
}

#menu ul {
  margin: 0;
  padding: 0;
  list-style: none;
  background: url(http://localhost/~mocha/nowdata-media/images/nowdata_menu.gif);
}

#menu li {
  float: left;
  margin: 0;
  padding: 0;
}

#menu li a {
  display: block;
  height: 40px;
  background-image: url(http://localhost/~mocha/nowdata-media/images/nowdata_menu.gif);
  background-repeat: no-repeat;
  text-indent: -9999px;
  margin-top: 4px;
}

#menu li a.home { width: 87px; background-position: 0 -4px; }
#menu li a.about { width: 161px; background-position: -87px -4px; }
#menu li a.contact { width: 117px; background-position: -248px -4px; }
#menu li a.services { width: 189px; background-position: -365px -4px; }
/* 160 pixel spacer for "our projects:" */
#menu li a.nowcast { margin-left: 160px; width: 123px; background-position: -714px -4px; }
#menu li a.nowtech { width: 111px; background-position: -837px -4px; }

#menu li a.home:hover,
#menu li a.home.active { background-position: 0 -48px; }
#menu li a.about:hover,
#menu li a.about.active { background-position: -87px -48px; }
#menu li a.contact:hover,
#menu li a.contact.active { background-position: -248px -48px; }
#menu li a.services:hover,
#menu li a.services.active { background-position: -365px -48px; }
/* 160 pixel spacer for "our projects:" */
#menu li a.nowcast:hover,
#menu li a.nowcast.active { background-position: -714px -48px; }
#menu li a.nowtech:hover,
#menu li a.nowtech.active { background-position: -837px -48px; }


#header h1 a {
  background: url(http://localhost/~mocha/nowdata-media/images/nowdata_header_logo.gif) no-repeat top left;
  display: block;
  width: 273px;
  height: 25px;
  text-indent: -9999px;
}

.data_list h3 {
  font-weight: bold;
  font-size: 1.2em;
}

.data_list h3 a {
  text-decoration : none;
}

.data_list,
.data_list li {
  margin : 0;
  padding : 0;
  list-style: none;
}

.data_list li.indicator {
  margin-bottom : 20px;
  padding-bottom : 20px;
  border-bottom : 1px solid #ccc;
}

.data_list li.indicator h3 a {
  color: #00426D
}

.pagination {
  text-align: center;
  color : #999;
  font-weight: bold;
  text-transform: capitalize;
}

.pagination .disabled2 {
  visibility: hidden;
  position: fixed;
  bottom: 0;
  left: 0;
  padding : 0;
  margin : 0;
  display: block;
  height: 0;
  width : 0;
}

.pagination .next,
.pagination .prev {
  margin : 0 40px;
}

.pagination .next { margin-right : none; }
.pagination .prev { margin-left : none; }

.pagination a {
  color : #ccc;
  text-decoration: none;
}

.pagination a:hover {
  color : #666;
}

.pagination .page {
  padding : 2px;
}

.notes {
  background : #dce4ea;
  padding : 15px;
  border : 2px solid #adb3b8;
  margin-top : 25px;
}

hr { margin: 25px 0; }





#list-projects_in_focus, 
#list-projects_in_focus li { 
  margin: 0;
  padding : 0;
  list-style: none;
}

#list-projects_in_focus li {
  margin-bottom : 25px;
  padding-bottom : 25px;
  border-bottom : 1px solid #ccc;
}

#list-projects_in_focus li h3 {
  font-size : 1.4em;
  letter-spacing : -1px;
  padding-bottom : 5px;
}

.readmorelink {
  color: #FCA942;
  font-weight: bold;
  text-decoration: none;
}

.readmorelink:hover {
  color: #DB5E21;
}






/* sidebar topic list for homepage and dataexplorer page */

/*#right .section.browse_by_topic {
  padding-bottom : 5px;
}
*/
ul.topiclist {
  margin : 0 -20px 0 0;
  padding : 0;
}

ul.topiclist li {
  margin : 0 20px 20px 0;
  padding : 0;
  float: left;
  width : 163px;
  height : 40px;
  color : #666;
  list-style: none;
  display: block;
}

ul.topiclist li img {
  float: left;
  margin-right : 10px;
}

ul.topiclist h3 a {
  font-weight: bold;
  color : #333;
  text-decoration: none;
  display: block;
  line-height: 1em;
}

ul.topiclist .metadata {
  color : #999;
  font-size : .85em;
  line-height: 1.5em;
}

.topiclist .icon {
  width : 30px;
  height: 30px;
  display: block;
  background: #333;
  float: left;
  margin-right: 8px;
  text-indent: -9999px;
}

.topiclist .health-and-safety .icon {
  background: url(http://localhost/~mocha/nowdata-media/images/topic_icons/HealthSafety_30x30.gif) no-repeat;
}

.topiclist .employment-economy .icon {
  background: url(http://localhost/~mocha/nowdata-media/images/topic_icons/EmploymentEconomy_30x30.gif) no-repeat;
}

.topiclist .education .icon {
  background: url(http://localhost/~mocha/nowdata-media/images/topic_icons/Education_30x30.gif) no-repeat;
}

.topiclist .people .icon {
  background: url(http://localhost/~mocha/nowdata-media/images/topic_icons/People_30x30.gif) no-repeat;
}

.topiclist .built-natural-environment .icon {
  background: url(http://localhost/~mocha/nowdata-media/images/topic_icons/BuiltNaturalEnvironment_30x30.gif) no-repeat;
}

.topiclist .employment-economy .icon {
  background: url(http://localhost/~mocha/nowdata-media/images/topic_icons/EmploymentEconomy_30x30.gif) no-repeat;
}

.crosstabs.icon {
  background: url(http://localhost/~mocha/nowdata-media/images/icon_crosstab_30x30.gif) no-repeat;
}

.weave.icon {
  background: url(http://localhost/~mocha/nowdata-media/images/icon_weave_30x30.gif) no-repeat;
}






/* get help exploring sidebar cta */
.get_help_cta a {
  font-size : 1.5em;
  text-decoration: none;
  color : #00416c;
}


ul.checkbox_list {
  margin : 0;
  margin-right : -10px;
}

ul.checkbox_list li {
  display: block;
  margin : 0 10px 0px 0;
  float: left;
  width : 168px;
}








/* indicator page styles */

.source_name {
  font-size : 1.2em;
  color: #00426d;
  font-weight: bold;
}

#content #left p {
  margin-bottom : 1em;
}





.resource-list li {
  list-style: disc;
}




#right form .inline_form_items h2,
form .inline_form_items select {
  display: inline-block;
  margin: 0px;
  padding: 0px;
  margin-right: .5em;
}




.num_results {
  font-style: italic;
  color: #999;
  font-size: .8em;
  margin-top : -25px;
  margin-bottom : 15px;
}

.toggleable_item {
  display: none;
}

a.toggle_resources {
  font-weight: bold;
  color : #666;
}

a.options_toggle {
  color: #737A80;
  font-size: 1.4em;
  letter-spacing: -1px;
  margin-bottom: 20px;
  display: block;
  text-decoration: none;
  font-weight: bold;
}

#right .browse_all h2 {
  margin : 0px;
  padding : 0px;
  font-size: 1.6em;
}

.browse_all h2 a {
  color: #737A80;
  text-decoration: none;
}

.browse_all h2 a:hover {
  text-decoration: underline;
}

.metainfo.format {
  color : #999;
  font-size: .8em;
  font-style: italic;
  margin-top: 0px;
  padding-top : 0px;
  display: block;
  line-height: 1em;
}


.resource_list li {
  margin-top : .1em;
}

.sidebar_tools ul.topiclist li {
  padding-bottom : 0px;
  margin-bottom: 0px;
}





.countylist li {
  float: left;
  width : 33%;
}



#right .section.nowtech h2 {
  margin: 0px;
  padding: 0px;
  margin-bottom : 5px;
}

#right .section.nowtech h2 a {
  background: url(http://localhost/~mocha/nowdata-media/images/nowtech_sidebarlogo.gif) no-repeat;
  display: block;
  height: 50px;
  width : 248px;
  text-indent: -9999px;
}

#right .section.nowtech p a {
  text-decoration: none;
  color: #666;
  font-style: italic;
}

#right .section.nowtech p a:hover {
  text-decoration: underline;
}




#right ul.indicatorlist li {
  padding-bottom : .5em;
}

#right ul.indicatorlist a {
  text-decoration: none;
  font-weight: bold;
}

#right ul.indicatorlist a:hover {
  text-decoration: underline;
}

